New feature: Add Poll

--- a/polls/templates/polls/createPoll.html
+++ b/polls/templates/polls/createPoll.html
@@ -12,7 +12,12 @@
       <label for="describtion">Describtion</label>
         {{form.describtion}}
     </div>
-    {{form2}}
+    <div class="form-group">
+      {{form.choice1.label}}
+      {{form.choice1}}
+      {{form.choice2.label}}
+      {{form.choice2}}
+    </div>
     <button type="submit" class="btn btn-outline-primary">Submit</button>
   </form>
 </div>
