--- a/polls/templates/polls/register.html
+++ b/polls/templates/polls/register.html
@@ -14,7 +14,7 @@
     <label for="inputPassword" class="sr-only">Confirm Password</label>
     {{form.password2}}
     <!-- <input type="password"  class="form-control my-2" placeholder="Confirm Password" required> -->
-    <button class="btn btn-lg btn-primary btn-block mt-4" type="submit">Register</button>
+    <button class="btn btn-lg btn-primary btn-block mt-4" type="submit">Create Account</button>
     {% if form.errors %}
     <div class="alert alert-danger" role="alert">
         {{ form.errors }}
