--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -1,7 +1,6 @@
 {% extends 'polls/base.html' %}
 
 {%  block content%}
-
 <div class="col-sm-4 flex-column justify-content-center align-items-center">
   <h1 >{{ question.question_text }}</h1>
   <h6 class="text-muted my-4">{{ question.describtion }}</h6>
@@ -10,12 +9,37 @@
   <li class="list-group-item">
     {{ choice.choice_text }}
     <span class="badge badge-info badge-pill float-right">{{ choice.votes }} votes</span>  
-  </li>
-  {% endfor %}
+  </l>
+  {% endfor %}i
 </ul>
+<canvas id="myChart" width="250" height="250" class="my-3"></canvas>
+
 
 <a class="btn btn-primary btn-block my-1 " href="{% url 'polls:detail' question.id %}">Vote again?</a>
 <a class="btn btn-light btn-block my-1" href="{% url 'polls:index' %}">Home</a>
 </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js" integrity="sha512-d9xgZrVZpmmQlfonhQUvTR7lMPtO7NkZMkA0ABN3PHCbKA5nqylQ/yWlFAyY6hYgdF1Qh6nYiuADWwKB4C2WSw==" crossorigin="anonymous"></script>
+<script>
+  var ctx = document.getElementById('myChart');
+  data = {
+    datasets: [{
+    fill: true,
+    backgroundColor: [
+        '#FF6384',
+        '#36A2EB',
+        '#FFCD56'
+        ],
+    data: [10, 20, 30]
+    }],
+    labels: ['Red',
+            'Yellow',
+            'Blue']
+
+    };
+    var myPieChart = new Chart(ctx,{
+        type: 'pie',
+        data: data
+    });
+</script>
 
 {% endblock %}
