--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -12,11 +12,10 @@
   </l>
   {% endfor %}i
 </ul>
+
 <canvas id="myChart" width="250" height="250" class="my-3"></canvas>
 
-
-<a class="btn btn-primary btn-block my-1 " href="{% url 'polls:detail' question.id %}">Vote again?</a>
-<a class="btn btn-light btn-block my-1" href="{% url 'polls:index' %}">Home</a>
+<a class="btn btn-light btn-block my-1" href="{% url 'polls:index' %}">Back to Polls.</a>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js" integrity="sha512-d9xgZrVZpmmQlfonhQUvTR7lMPtO7NkZMkA0ABN3PHCbKA5nqylQ/yWlFAyY6hYgdF1Qh6nYiuADWwKB4C2WSw==" crossorigin="anonymous"></script>
 <script>
@@ -25,17 +24,16 @@
     datasets: [{
     fill: true,
     backgroundColor: [
-        '#FF6384',
-        '#36A2EB',
-        '#FFCD56'
+        '#1d4e89',
+        '#0f80aa',
+        '#3fc1c0',
+        '#00b2ca',
+        '#1a5b92',
+        '#04a6c2',
+        '#ff7900'
         ],
-    data: [10, 20, 30]
-    }],
-    labels: ['Red',
-            'Yellow',
-            'Blue']
-
-    };
+    data: {{ data|safe}} }],
+    labels: {{ labels|safe }}   };
     var myPieChart = new Chart(ctx,{
         type: 'pie',
         data: data
